--- a/UIKitCoordinator/Modules/Login/ViewController/LoginViewController.xib
+++ b/UIKitCoordinator/Modules/Login/ViewController/LoginViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -76,10 +76,10 @@
                             <rect key="frame" x="0.0" y="282" width="375" height="480"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgA-dV-Tke" userLabel="formView">
-                                    <rect key="frame" x="30" y="20" width="315" height="339.66666666666669"/>
+                                    <rect key="frame" x="30" y="20" width="315" height="319.66666666666669"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="244" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="IBJ-8V-dyT">
-                                            <rect key="frame" x="0.0" y="27.333333333333314" width="315" height="185"/>
+                                            <rect key="frame" x="0.0" y="20" width="315" height="179.66666666666666"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Pu8-dX-Lgd">
                                                     <rect key="frame" x="0.0" y="0.0" width="315" height="125"/>
@@ -158,10 +158,10 @@
                                                     </subviews>
                                                 </stackView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6KE-e3-c9E">
-                                                    <rect key="frame" x="0.0" y="135.00000000000006" width="315" height="50"/>
+                                                    <rect key="frame" x="0.0" y="135" width="315" height="44.666666666666657"/>
                                                     <subviews>
                                                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lupa Pasword" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWP-YA-gzk">
-                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="44.666666666666664"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="12"/>
                                                             <color key="textColor" name="background_primary"/>
                                                             <nil key="highlightedColor"/>
@@ -188,7 +188,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" verticalHuggingPriority="231" translatesAutoresizingMaskIntoConstraints="NO" id="WYi-cl-5aH">
-                                    <rect key="frame" x="30" y="339.66666666666663" width="315" height="140.33333333333337"/>
+                                    <rect key="frame" x="30" y="319.66666666666663" width="315" height="140.33333333333337"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G6i-mb-vcZ" customClass="UIButtonCapsule" customModule="UIKitCoordinator" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="20" width="315" height="50"/>
@@ -234,7 +234,7 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="tgA-dV-Tke" secondAttribute="trailing" constant="30" id="9Lb-6G-PFj"/>
-                                <constraint firstAttribute="bottom" secondItem="WYi-cl-5aH" secondAttribute="bottom" id="DFZ-3P-he5"/>
+                                <constraint firstAttribute="bottom" secondItem="WYi-cl-5aH" secondAttribute="bottom" constant="20" id="DFZ-3P-he5"/>
                                 <constraint firstItem="WYi-cl-5aH" firstAttribute="leading" secondItem="kcQ-2P-Mkb" secondAttribute="leading" constant="30" id="EHr-d2-UzF"/>
                                 <constraint firstItem="tgA-dV-Tke" firstAttribute="bottom" secondItem="WYi-cl-5aH" secondAttribute="top" constant="20" id="Pwq-Tt-0Uo"/>
                                 <constraint firstItem="tgA-dV-Tke" firstAttribute="leading" secondItem="kcQ-2P-Mkb" secondAttribute="leading" constant="30" id="TTm-jk-dGE"/>
